@@ -112,6 +112,7 @@ since 1999.  If I missed your name, let me know.
 * Rene Klootwijk
 * David Kmoch
 * Brandon Knitter
+* Ryoji Kobayashi
 * Daniel Koffler
 * Chris Kolquist
 * Jiri Kostern
